# Colli2De

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  TODO.md  build.bat  build.sh  get_catch2_local.bat  get_catch2_local.sh  get_libs_local.bat  get_libs_local.sh  install_hooks.bat  install_hooks.sh  test.bat  test.sh
cmake/: IncludePackageWithFallback.cmake
hooks/: commit-msg
include/colli2de/: Constants.hpp  Manifold.hpp  Ray.hpp  Registry.hpp  Shapes.hpp  Transform.hpp  Vec2.hpp
include/colli2de/internal/collision/: Collision.hpp
include/colli2de/internal/data_structures/: BroadPhaseTree.hpp  DynamicBVH.hpp
include/colli2de/internal/geometry/: AABB.hpp  RaycastShapes.hpp  ShapesUtils.hpp
include/colli2de/internal/utils/: Debug.hpp  Methods.hpp  Serialization.hpp
scripts/: compare_tests.bat  compare_tests.sh  compare_tests_format.py  compare_tests_parse.py  get_libs_local.bat  get_libs_local.sh  install_hooks.bat  install_hooks.sh
src/: AABB.cpp  AABB.hpp  CMakeLists.txt
src/bvh/: dynamicBVH.hpp
src/colli2de/: Ray.hpp  Registry.hpp  Shapes.hpp  Transform.hpp  Vec2.hpp
src/colli2de/internal/collision/: Collision.cpp  Collision.hpp  Manifold.hpp
src/colli2de/internal/data_structures/: BroadPhaseTree.hpp  BroadPhaseTree_impl.tpp  DynamicBVH.hpp  DynamicBVH_queries.tpp  DynamicBVH_treeHandling.tpp
src/colli2de/internal/geometry/: AABB.cpp  RaycastShapes.cpp  RaycastShapes.hpp  Shapes.cpp  ShapesUtils.hpp
src/collision/: Collision.cpp  Collision.hpp  Manifold.hpp
src/data_structures/: BroadPhaseTree.hpp  BroadPhaseTree_impl.tpp  DynamicBVH.hpp  DynamicBVH_queries.tpp  DynamicBVH_treeHandling.tpp
src/geometry/: AABB.cpp  AABB.hpp  Ray.hpp  RaycastShapes.cpp  RaycastShapes.hpp  Shapes.cpp  ShapesComputations.hpp  SweepShapes.hpp  Transformations.hpp
src/utils/: methods.hpp
tests/: CMakeLists.txt  Random.hpp  main.cpp  test_AABB.cpp  test_dynamicBVH.cpp  test_dynamicBVH_creation.cpp  test_dynamicBVH_edgeCases.cpp  test_dynamicBVH_performance.cpp  test_dynamicBVH_query.cpp  test_dynamicBVH_stress.cpp
tests/collision/: test_collision.cpp  test_collision_performance.cpp  test_is_colliding.cpp
tests/data_structures/: test_broadPhaseTree_creation.cpp  test_broadPhaseTree_edgeCases.cpp  test_broadPhaseTree_filterQuery.cpp  test_broadPhaseTree_performance.cpp  test_broadPhaseTree_simpleQuery.cpp  test_broadPhaseTree_stress.cpp  test_dynamicBVH_creation.cpp  test_dynamicBVH_edgeCases.cpp  test_dynamicBVH_filterQuery.cpp  test_dynamicBVH_performance.cpp  test_dynamicBVH_query.cpp  test_dynamicBVH_simpleQuery.cpp  test_dynamicBVH_stress.cpp
tests/geometry/: test_AABB.cpp  test_RaycastShapes.cpp  test_RaycastShapes_performance.cpp  test_ShapeQueries.cpp  test_SweepRaycast.cpp  test_SweepRaycast_performance.cpp  test_SweepShapes.cpp  test_SweepShapes_performance.cpp
tests/registry/: test_registry_basic.cpp  test_registry_more.cpp  test_registry_movement.cpp  test_registry_performance.cpp  test_registry_raycast.cpp  test_registry_raycast_performance.cpp  test_registry_shapecast.cpp
tests/utils/: Performance.hpp  Print.hpp  Random.hpp
